# fastapi_hair

./: .gitignore  Dockerfile  Dockerfile.prod  alembic.ini  docker-compose.prod.yml  docker-compose.yml  docker-compose.yml~  main.py  pyproject.toml
app/: database.py  db_depends.py
app/common/: auth.py  config.py  database.py  db_depends.py
app/common/migrations/: env.py
app/common/models/: __init__.py  hairs.py  orders.py  users.py  wallets.py
app/common/nginx/: nginx.conf
app/common/services/: auth_memory.py  cookies.py  email_service.py  security.py
app/migrations/versions/: cc581bb9a81c_create_models.py
app/models/: __init__.py  hairs.py  orders.py  sales.py  users.py
app/v1/: auth.py  enums.py  helpers.py  main.py
app/v1/conf/: templates.py
app/v1/middlewares/: auth_middleware.py
app/v1/repositories/: common.py  dependencies.py  hairs.py  helpers.py  orders.py  products.py  tones.py  tones.py~  transactions.py  transactions.py~  users.py  wallets.py
app/v1/routers/: auth_pages.py  hairs.py  index.py  orders.py  products.py  site_pages.py  transactions.py  wallets.py
app/v1/schemas/: base.py  hairs.py  orders.py  products.py  tones.py
app/v1/services/: hairs.py  hairs.py~  orders.py  products.py  products.py~  tones.py  transactions.py  user.py  wallets.py
app/v1/templates/: base.html  forbidden.html  home.html  index.html  login.html  order_create.html  order_detail.html  order_detail.html~  orders.html  orders_list.html  product_create.html  product_detail.html  products.html  renew.html  transactions_deposit_form.html  verify.html  (+6 more)
(+31 files in other folders)
