[project]
name = "fastapi-hair"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "email-validator>=2.3.0",
    "fastapi[all]>=0.135.1",
    "greenlet>=3.3.2",
    "psycopg2-binary",
    "pydantic>=2.12.5",
    "setuptools>=82.0.1",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.42.0",
]
